--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:eLYqjl/OXiJRh7u4yrEufsxa4bf7iWkoiE+HwhN0AUk=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=https://57eb-2001-4454-145-6800-69d6-5c42-2f44-dc82.ngrok-free.app
 
