--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,4 +57,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /var/www/html/ecolodgesmr
-            php artisan optimize
+            php artisan config:cache
+            php artisan route:cache
+            php artisan view:cache
