--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=EcolodgeSMR
 APP_ENV=local
 APP_KEY=base64:eLYqjl/OXiJRh7u4yrEufsxa4bf7iWkoiE+HwhN0AUk=
 APP_DEBUG=true
@@ -49,12 +49,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=a61d53905f170b
-MAIL_PASSWORD=af0ae10ed7e88f
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="info@sibugay.com"
+MAIL_HOST=live.smtp.mailtrap.io
+MAIL_PORT=587
+MAIL_USERNAME=api
+MAIL_PASSWORD=d413adb763ca534de92427408ef5dbf0
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="info@adminsmr.site"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -76,7 +76,7 @@ PAYPAL_CURRENCY=PHP
 PAYPAL_LOG_ENABLED=true
 PAYPAL_LOG_LEVEL=DEBUG
 
-SUPABASE_BASE_URL=https://vnfoxcdnoahqenfjssdv.supabase.co/storage/v1/object/public/Ecolodge%20Pics/
+
 
 
 
