--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "ext-curl": "*",
+        "biscolab/laravel-recaptcha": "^6.1",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "paymongo/paymongo-php": "^0.0.0",
