--- a/.env.example
+++ b/.env.example
@@ -49,10 +49,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=live.smtp.mailtrap.io
+MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=587
-MAIL_USERNAME=api
-MAIL_PASSWORD=d413adb763ca534de92427408ef5dbf0
+MAIL_USERNAME=a61d53905f170b
+MAIL_PASSWORD=af0ae10ed7e88f
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="info@adminsmr.site"
 MAIL_FROM_NAME="${APP_NAME}"
@@ -75,9 +75,3 @@ PAYPAL_MODE=sandbox
 PAYPAL_CURRENCY=PHP
 PAYPAL_LOG_ENABLED=true
 PAYPAL_LOG_LEVEL=DEBUG
-
-
-
-
-
-
