--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@fortawesome/fontawesome-free": "^6.6.0",
         "aos": "^2.3.4",
         "choices.js": "^11.0.2",
-        "flowbite": "^2.5.2"
+        "flowbite": "^2.5.2",
+        "sweetalert2": "^11.17.2"
     }
 }
